Fix color contrast, change pastel-red

--- a/assets/css/0_variables.css
+++ b/assets/css/0_variables.css
@@ -31,7 +31,7 @@
 	--color-very-light-pink: #eeeeee;
 	--color-dark-blue: #0d2e38;
 	--color-very-light-pink-two: #d8d8d8;
-	--color-pastel-red: #e3544c;
+	--color-pastel-red: #d73a35;
 	--color-vermillion: #f01c16;
 	--color-mango: #fb9929;
 	--color-dark-green-2: #007e5f;
